[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simudyne"
version = "0.1.0"
description = "Python SDK for the Simudyne Pulse synthetic market data API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Simudyne", email = "support@simudyne.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "polars>=0.20.0",
    "tqdm>=4.60.0",
    "websocket-client>=1.0.0",
]

[project.urls]
Homepage = "https://pulse.simudyne.com"
Documentation = "https://pulse.simudyne.com/docs"
Repository = "https://github.com/simudyne/pulse-api"

[tool.setuptools.packages.find]
where = ["src"]
